fixed issue with containers not resizing or aligning correctly

--- a/css/navstyle.css
+++ b/css/navstyle.css
@@ -25,6 +25,7 @@
     .topnav .icon {
       display: none;
     }
+    
     @media screen and (max-width: 600px) {
       .topnav a:not(:first-child) {display: none;}
       .topnav a.icon {
@@ -46,57 +47,3 @@
         text-align: left;
       }
     }
-  
-
-/* OLD NAVBAR 
-/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/*/
-
-/*
-#navCont {
-    width: 100%;
-    max-height: 100px;
-    height: auto;
-    display: flex;
-    background-color: rgb(212, 212, 212);
-    align-items: flex-end;
-    justify-content: flex-end;
-    -webkit-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.75);
-    }
-
-  .navWord {
-    transform: skewX(25deg);
-  }
-  .navItems:hover {
-    background-color: #aaa;
-  }
-  
-  #navBar {
-    background-color: grey;
-    color: black;
-    max-width: 100%;
-    min-width: 50px;
-    max-height: 100px;
-    min-height: 50px;
-    position: relative;
-    flex-direction: column;
-    z-index: 1;
-  } 
-  div a {
-    color: black;
-    list-style: none;
-  }
-  .navItems {
-    font-family: 'Libre Baskerville', serif;
-    display: flex;
-    background-color: #ddd;
-    margin-right: 2em;
-    transform: skewX(-25deg);
-    padding: 1em;
-    width: auto;
-    height: auto;
-    -webkit-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 6px 5px 0px rgba(0,0,0,0.75);
-  } */
