--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -415,29 +415,43 @@ there.
 @media (min-width: 400px) {}
 
 /* Larger than phablet (also point when grid becomes active) */
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
+    margin-top: 1em;
+    margin-right: 5em;
   }
 }
 @media screen and (max-width: 600px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
-     /* position: absolute;
-    right: 0;
-    top: 0; */
-    float: right;
+     position: absolute;
+    right: 20%;
+    top: 20%;
     margin-top: 1em;
-    margin-right: 1em;
+    margin-right: 5em;
   }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
+} */
+/* Larger than phablet (also point when grid becomes active) */
+@media screen and (max-width: 550px) {
+  .genericContainer, #heroContainer {
+    width: 80%;
+    position: relative;
+    display: flex;
+    text-align: center;
+    font-size: 16px;
+    flex-direction: column;
+    margin-left: 10%;
+  }
 }
+
 
 /* Larger than tablet */
 @media (min-width: 750px) {}
@@ -448,22 +462,16 @@ there.
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
 
-.brunt {
-  width: 100px;
-  height: 100px;
-  background-color: lawngreen;
-  position: fixed;
-}
-
 #heroBox {
   display: grid;
   position: relative;
   text-align: center;
   justify-content: center;
-  max-width: 100%;
+  max-width: 80%;
   min-width: 50px;
   max-height: 100%;
   min-height: 50px;
+  margin: 0px;
   z-index: 1;
   
 }
@@ -483,41 +491,40 @@ there.
   background: linear-gradient(20deg, rgba(71,69,84,1) 7%, rgba(192,229,216,1) 66%, rgba(71,69,84,1) 91%); 
 }
 
-#introContainer {
-  background-color: #ddd;
-  border-radius: 2px;
-  display: block;
+#heroContainer {
+  display: grid;
+  margin: 0px;
+  min-width: 100%;
+  max-width: 100%;
+  justify-items: center;
+  align-items: center;
   text-align: center;
   position: relative;
-  z-index: 0;
-  -webkit-box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
-box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
 }
 .genericContainer {
   background-color: #ddd;
   min-width: 3em;
-  width: 80%;
+  max-width: 80%;
   min-height: 5em;
   border-radius: 2px;
-  display: block;
   text-align: center;
   position: relative;
+  justify-content: center;
   z-index: 0;
   -webkit-box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
-box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
 }
 
 .spacer {
   background-color: transparent;
   max-width: 100%;
-  min-width: 100px;
+  min-width: auto;
   max-height: 100%;
   min-height: 5rem;
   position: relative;
 }
-  .knowledge {
+/*   .knowledge {
   background-color: #ddd;
   max-width: 100%;
   min-width: 150px;
@@ -527,57 +534,10 @@ box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
 box-shadow: 9px 10px 5px 0px rgba(0,0,0,0.75);
-}
+} */
 .knowTitle {
   font-size: x-large;
-}
-
-#box6 {
-  background-color: cyan;
-  max-width: 100%;
-  min-width: 100px;
-  max-height: 100%;
-  min-height: 100px;
-}
-#box7 {
-  background-color: lawngreen;
-  max-width: 100%;
-  min-width: 50px;
-  max-height: 100%;
-  min-height: 50px;
-}
-#box8 {
-  background-color: rebeccapurple;
-  max-width: 100%;
-  min-width: 50px;
-  max-height: 100%;
-  min-height: 50px;
-}
-#box9 {
-  background-color: blue;
-  max-width: 100%;
-  min-width: 50px;
-  max-height: 100%;
-  min-height: 50px;
-}
-#box10 {
-  background-color: cyan;
-  max-width: 100%;
-  min-width: 50px;
-  max-height: 100%;
-  min-height: 50px;
-}
-#box11 {
-  background-color: lawngreen;
-  max-width: 100%;
-  min-width: 50px;
-  max-height: 100%;
-  min-height: 50px;
-}
-#box12 {
-  background-color: rebeccapurple;
-  max-width: 100%;
-  min-width: 100px;
-  max-height: 100%;
-  min-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
